fix flicker issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -586,6 +586,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-\[300px\] {
   height: 300px;
 }
